<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/OnePomodora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startRegularPomodora"
            android:text="@string/RegularPomodoraString" />

        <Button
            android:id="@+id/DoublePomodora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startDoublePomodora"
            android:text="@string/DoublePomodoraString" />

        <Button
            android:id="@+id/QuadPomodora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startQuadroPomodora"
            android:text="@string/QuadroPomodoraString" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editHoursNumber"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/HoursHintString"
                    android:ems="10"
                    android:hint="@string/HoursHintString"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/editMinutesNumber"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/HoursHintString"
                    android:ems="10"
                    android:hint="@string/MinutesHintString"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/editSecondsNumber"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/SecondsHintString"
                    android:ems="10"
                    android:hint="@string/SecondsHintString"
                    android:inputType="number" />

            </LinearLayout>

            <Button
                android:id="@+id/CusromPomodora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startCustomPomodora"
                android:text="@string/CustomPomodoraString" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>